Init 4byte service
