# services/server/src/openapi.yaml
@@ -101,12 +101,6 @@ paths:
     $ref: "server/apiv1/verification/solc-json/session/solc-json.session.paths.yaml#/paths/~1session~1input-solc-json"
   /session/verify/etherscan:
     $ref: "server/apiv1/verification/etherscan/session/etherscan.session.paths.yaml#/paths/~1session~1verify~1etherscan"
-  /signature-database/v1/lookup:
-    $ref: "signature-database.yaml#/paths/~1signature-database~1v1~1lookup"
-  /signature-database/v1/search:
-    $ref: "signature-database.yaml#/paths/~1signature-database~1v1~1search"
-  /signature-database/v1/stats:
-    $ref: "signature-database.yaml#/paths/~1signature-database~1v1~1stats"
   /private/change-log-level:
     post:
       summary: Change the logging level of the application
